--- a/tools/balloon/README
+++ b/tools/balloon/README
@@ -1,17 +1,17 @@
-Xeno Balloon driver supports two operations:
 
-1. Inflating - which means domain giving up pages of mem to xen.
-2. Deflating - which means reclaiming memory pages from xen.
+The Xen balloon driver supports two operations:
+ 1. Inflating - which means domain giving up pages of memory to Xen.
+ 2. Deflating - which means reclaiming memory pages from Xen.
 
-Currently, domain can only claim pages from xen up to the number of 
+Currently a domain can only claim pages from Xen up to the number of 
 previously released ones. This is to change. 
 
 Example:
 
 # balloon inflate 1000
 
-Give up 1000 pages to xen.
+Give up 1000 pages to Xen.
 
 # balloon deflate 1000
 
-Claim 1000 pages from xen.
+Claim 1000 pages from Xen.
