--- a/docs/interface.tex
+++ b/docs/interface.tex
@@ -392,35 +392,20 @@ assigned domains should be run there.
 
 \section{Standard Schedulers}
 
-These BVT and Round Robin schedulers are part of the normal Xen
-distribution.  A port of the Atropos scheduler from the Nemesis
-operating system is almost complete and will be added shortly.
+These BVT, Atropos and Round Robin schedulers are part of the normal
+Xen distribution.  BVT provides porportional fair shares of the CPU to
+the running domains.  Atropos can be used to reserve absolute shares
+of the CPU for each domain.  Round-robin is provided as an example of
+Xen's internal scheduler API.
 
-\subsection{Borrowed Virtual Time (BVT)}
-
-This was the original Xen scheduler.  BVT is designed for general-purpose
-environments but also provides support for latency-sensitive threads.  It
-provides long-term weighted sharing but allows tasks a limited ability to
-``warp back'' in virtual time so that they are dispatched earlier.
-
-BVT can be activated by specifying {\tt sched=bvt} as a boot argument to Xen.
-
-\subsection{Round Robin}
-
-The round robin scheduler is a very simple example of some of the basic parts
-of the scheduler API.
-
-Round robin can be activated by specifying {\tt sched=rrobin} as a boot
-argument to Xen.
+More information on the characteristics and use of these schedulers is
+available in { \tt Sched-HOWTO.txt }.
 
 \section{Scheduling API}
 
 The scheduling API is used by both the schedulers described above and should
 also be used by any new schedulers.  It provides a generic interface and also
 implements much of the ``boilerplate'' code.
-
-\paragraph*{Note:} the scheduler API is currently undergoing active development,
-so there may be some changes to this API, although they are expected to be small.
 
 Schedulers conforming to this API are described by the following
 structure:
@@ -438,7 +423,7 @@ struct scheduler
     void         (*free_task)      (struct task_struct *);
     void         (*rem_task)       (struct task_struct *);
     void         (*wake_up)        (struct task_struct *);
-    long         (*do_block)       (struct task_struct *);
+    void         (*do_block)       (struct task_struct *);
     task_slice_t (*do_schedule)    (s_time_t);
     int          (*control)        (struct sched_ctl_cmd *);
     int          (*adjdom)         (struct task_struct *,
@@ -458,7 +443,7 @@ The fields of the above structure are described in more detail below.
 
 \subsubsection{name}
 
-The name field is an arbitrary descriptive ASCII string.
+The name field should point to a descriptive ASCII string.
 
 \subsubsection{opt\_name}
 
@@ -486,22 +471,22 @@ selected.
 
 \paragraph*{Return values}
 
-This should return negative on failure --- failure to initialise the scheduler
-will cause an immediate panic.
+This should return negative on failure --- this will cause an
+immediate panic and the system will fail to boot.
 
 \subsubsection{alloc\_task}
 
 \paragraph*{Purpose}
-This is called when a {\tt task\_struct} is allocated by the generic scheduler
-layer.  A particular scheduler implementation may use this method to allocate
-per-task data for this task.  It may use the {\tt sched\_priv} pointer in the
-{\tt task\_struct} to point to this data.
+Called when a {\tt task\_struct} is allocated by the generic scheduler
+layer.  A particular scheduler implementation may use this method to
+allocate per-task data for this task.  It may use the {\tt
+sched\_priv} pointer in the {\tt task\_struct} to point to this data.
 
 \paragraph*{Call environment}
 The generic layer guarantees that the {\tt sched\_priv} field will
 remain intact from the time this method is called until the task is
 deallocated (so long as the scheduler implementation does not change
-it!).
+it explicitly!).
 
 \paragraph*{Return values}
 Negative on failure.
@@ -536,7 +521,8 @@ this method is called.
 
 \paragraph*{Purpose}
 
-This is called when a task is being removed from scheduling.
+This is called when a task is being removed from scheduling (but is
+not yet being freed).
 
 \subsubsection{wake\_up}
 
@@ -547,8 +533,7 @@ Called when a task is woken up, this method should put the task on the runqueue
 
 \paragraph*{Call environment}
 
-The generic layer guarantees that the task is already in state
-RUNNING.
+The task is already set to state RUNNING.
 
 \subsubsection{do\_block}
 
@@ -560,7 +545,9 @@ not remove the task from the runqueue.
 \paragraph*{Call environment}
 
 The EVENTS\_MASTER\_ENABLE\_BIT is already set and the task state changed to
-TASK\_INTERRUPTIBLE on entry to this method.
+TASK\_INTERRUPTIBLE on entry to this method.  A call to the {\tt
+  do\_schedule} method will be made after this method returns, in
+order to select the next task to run.
 
 \subsubsection{do\_schedule}
 
@@ -570,7 +557,7 @@ This method must be implemented.
 
 The method is called each time a new task must be chosen for scheduling on the
 current CPU.  The current time as passed as the single argument (the current
-task can be found using the {\tt current} variable).
+task can be found using the {\tt current} macro).
 
 This method should select the next task to run on this CPU and set it's minimum
 time to run as well as returning the data described below.
@@ -585,7 +572,7 @@ which also performs all Xen-specific tasks and performs the actual task switch
 (unless the previous task has been chosen again).
 
 This method is called with the {\tt schedule\_lock} held for the current CPU
-and with interrupts disabled.
+and local interrupts interrupts disabled.
 
 \paragraph*{Return values}
 
@@ -597,15 +584,16 @@ for (at maximum).
 \paragraph*{Purpose}
 
 This method is called for global scheduler control operations.  It takes a
-pointer to a {\tt struct sched\_ctl\_cmd}, from which it should select the
-appropriate command data.
+pointer to a {\tt struct sched\_ctl\_cmd}, which it should either
+source data from or populate with data, depending on the value of the
+{\tt direction} field.
 
 \paragraph*{Call environment}
 
-The generic layer guarantees that when this method is called, the caller was
-using the same control interface version and that the caller selected the
-correct scheduler ID, hence the scheduler's implementation does not need to
-sanity-check these parts of the call.
+The generic layer guarantees that when this method is called, the
+caller was using the caller selected the correct scheduler ID, hence
+the scheduler's implementation does not need to sanity-check these
+parts of the call.
 
 \paragraph*{Return values}
 
@@ -617,7 +605,9 @@ should either be 0 or an appropriate errno value.
 \paragraph*{Purpose}
 
 This method is called to adjust the scheduling parameters of a particular
-domain.
+domain, or to query their current values.  The function should check
+the {\tt direction} field of the {\tt sched\_adjdom\_cmd} it receives in
+order to determine which of these operations is being performed.
 
 \paragraph*{Call environment}
 
@@ -680,6 +670,7 @@ This method should dump any private settings for the specified task.
 
 This function is called with interrupts disabled and the {\tt schedule\_lock}
 for the task's CPU held.
+
 
 \chapter{Debugging}
 
