--- a/tools/examples/README
+++ b/tools/examples/README
@@ -16,27 +16,31 @@ send it (preferably with a little summary to go in this file) to
 xc_dom_control.py
  - general tool for controling running domains
   Usage: xc_dom_control.py [command] <params>
+
   stop      [dom]        -- pause a domain
   start     [dom]        -- un-pause a domain
-  shutdown  [dom]        -- request a domain to shutdown (can specify 'all')
+  shutdown  [dom] [[-w]] -- request a domain to shutdown (can specify 'all')
                             (optionally wait for complete shutdown)
   destroy   [dom]        -- immediately terminate a domain
   pincpu    [dom] [cpu]  -- pin a domain to the specified CPU
   suspend   [dom] [file] -- write domain's memory to a file and terminate
 			    (resume by re-running xc_dom_create with -L option)
-  restore   [file]       -- resume a domain from a file
+  unwatch   [dom]        -- kill the auto-restart daemon for a domain
   list                   -- print info about all domains
   listvbds               -- print info about all virtual block devs
   cpu_bvtset [dom] [mcuadv] [warp] [warpl] [warpu]
-                         -- set scheduling parameters for domain
-  cpu_bvtslice [slice]   -- default scheduler slice
+                         -- set BVT scheduling parameters for domain
+  cpu_bvtslice [slice]   -- set default BVT scheduler slice
+  cpu_atropos_set [dom] [period] [slice] [latency] [xtratime]
+                         -- set Atropos scheduling parameters for domain
+  cpu_rrobin_slice [slice] -- set Round Robin scheduler slice
   vif_stats [dom] [vif]  -- get stats for a given network vif
   vif_addip [dom] [vif] [ip]  -- add an IP address to a given vif
   vif_setsched [dom] [vif] [bytes] [usecs] -- rate limit vif bandwidth
   vif_getsched [dom] [vif] -- print vif's scheduling parameters
   vbd_add [dom] [uname] [dev] [mode] -- make disk/partition uname available to 
                             domain as dev e.g. 'vbd_add 2 phy:sda3 hda1 w'
-  vbd_remove [dom] [dev] -- remove disk or partition attached as 'dev'
+  vbd_remove [dom] [dev] -- remove disk or partition attached as 'dev' 
 
 
 xc_dom_create.py
@@ -89,7 +93,7 @@ Args to override the kernel command line, which is concatenated from these:
 
 
 
-xc_vd_tool
+xc_vd_tool.py
  - tool for manipulating virtual disks
    Usage: xc_vd_tool command <params>
 
@@ -126,3 +130,9 @@ This is a Sys-V init script for RedHat systems.
 On a RedHat system it should be possible to issue commands to this
 script using the "service" command and to configure if / when it is
 run automatically, using the "chkconfig" command.
+
+xend
+This is a Sys-V init script for RedHat systems, which can be used to
+start the Xen Daemon (xend) at boot time.
+
+ - Usage: xend {start|stop|status|restart|reload}
