bitkeeper revision 1.891.3.1 (40a107b0xATyR-Pt7aENgr5O6ydSyA)
Improvements to trace buffer features.

--- a/docs/interface.tex
+++ b/docs/interface.tex
@@ -705,11 +705,15 @@ value of the CPU cycle-counter.  For builds without the trace buffer enabled,
 the macros expand to no-ops and thus can be left in place without incurring
 overheads.
 
-\subsection{Enabling tracing}
+\subsection{Trace-enabled builds}
 
 By default, the trace buffer is enabled only in debug builds (i.e. {\tt NDEBUG}
 is not defined).  It can be enabled separately by defining {\tt TRACE\_BUFFER},
 either in {\tt <xen/config.h>} or on the gcc command line.
+
+The size (in pages) of the per-CPU trace buffers can be specified using the
+{\tt tbuf_size=n } boot parameter to Xen.  If the size is set to 0, the trace
+buffers will be disabled.
 
 \subsection{Dumping trace data}
 
@@ -725,10 +729,11 @@ in overall chronological order.
 
 The output from {\tt xentrace} can be post-processed using {\tt
 xentrace\_cpusplit} (used to split trace data out into per-cpu log files) and
-{\tt xentrace\_format} (used to pretty-print trace data).
+{\tt xentrace\_format} (used to pretty-print trace data).  For the predefined
+trace points, there is an example format file in {\tt tools/xentrace/formats }.
 
-For more information, see the manual pages for {\tt xentrace},
-{\tt xentrace\_format} and {\tt xentrace\_cpusplit}.
+For more information, see the manual pages for {\tt xentrace}, {\tt
+xentrace\_format} and {\tt xentrace\_cpusplit}.
 
 
 \chapter{Hypervisor calls}
