--- a/tools/xentrace/xentrace_format.1
+++ b/tools/xentrace/xentrace_format.1
@@ -1,4 +1,4 @@
-.TH XENTRACE_FORMAT 1 "11 March 2004" "Xen domain 0 utils"
+.TH XENTRACE_FORMAT 1 "11 May 2004" "Xen domain 0 utils"
 .SH NAME
 xentrace_format \- pretty-print Xen trace data
 .SH SYNOPSIS
@@ -18,14 +18,20 @@ The rules in \fIDEFS-FILE\fP should have the format shown below:
 
 Each rule should start on a new line.
 
-The format string may include the following format specifiers:
-%(cpu)s, %(tsc), %(event)s, %(1)s, %(2)s, %(3)s, %(4)s, %(5)s
+The format string may include format specifiers, such as:
+%(cpu)d, %(tsc)d, %(event)d, %(1)d, %(2)d, %(3)d, %(4)d, %(5)d
+
+[ the `d' format specifier output in decimal, alternatively `x'
+  will output in hexadecimal and `o' will output in octal ]
 
 These correspond to the CPU number, event ID, timestamp counter and
 the 5 data fields from the trace record.  There should be one such
 rule for each type of event to be pretty-printed (events which do not
 have formatting rules are ignored).
-          
+
+A sample format file for Xen's predefined trace events is available
+in the file tools/xentrace/formats in the Xen source tree.
+
 Depending on your system and the rate at which trace data is produced,
 this script may not be able to keep up with the output of
 \fBxentrace\fP if it is piped directly.  In these circumstances you
