--- a/tools/xentrace/xentrace_format.1
+++ b/tools/xentrace/xentrace_format.1
@@ -8,9 +8,9 @@ xentrace_format \- pretty-print Xen trace data
 ]
 .SH DESCRIPTION
 .B xentrace_format
-parses trace data from standard input and reformats it according to
-the rules in a file of definitions (\fIDEFS-FILE\fP), printing to
-standard output.
+parses trace data in \fBxentrace\fP binary format from standard input
+and reformats it according to the rules in a file of definitions
+(\fIDEFS-FILE\fP), printing to standard output.
 
 The rules in \fIDEFS-FILE\fP should have the format shown below:
 
