bitkeeper revision 1.1025 (40e044ddU7UgNd1ayy2fs4m2Brt_QA)
Tweak

--- a/docs/interface.tex
+++ b/docs/interface.tex
@@ -712,7 +712,7 @@ is not defined).  It can be enabled separately by defining {\tt TRACE\_BUFFER},
 either in {\tt <xen/config.h>} or on the gcc command line.
 
 The size (in pages) of the per-CPU trace buffers can be specified using the
-{\tt tbuf_size=n } boot parameter to Xen.  If the size is set to 0, the trace
+{\tt tbuf\_size=n } boot parameter to Xen.  If the size is set to 0, the trace
 buffers will be disabled.
 
 \subsection{Dumping trace data}
