bitkeeper revision 1.1071.1.3 (40f3f494hMH1GKUQuCB0vUKhJyfyoA)
Add a conswitch command-line option to Xen.

--- a/README.CD
+++ b/README.CD
@@ -307,6 +307,16 @@ that may be able to help diagnose problems:
                   transmitted/received character.
  [NB. Default for this option is 'com1,tty']
 
+ conswitch=<switch-char><auto-switch-char>
+                  Specify how to switch serial-console input between
+                  Xen and DOM0. The required sequence is CTRL-<switch_char>
+                  pressed three times. Specifying '`' disables switching.
+                  The <auto-switch-char> specifies whether Xen should
+                  auto-switch input to DOM0 when it boots -- if it is 'x'
+                  then auto-switching is disabled. Any other value, or
+                  omitting the character, enables auto-switching.
+ [NB. Default for this option is 'a']
+
  dom0_mem=xxx 	  Set the initial amount of memory for domain0.
 
  pdb=xxx          Enable the pervasive debugger.  See docs/pdb.txt
