bitkeeper revision 1.1086.2.1 (40f56f1dUhjhI2VI1m-7iYS5gF4jqA)
x86-64 now executes as far as the boot-time banner.

--- a/README.CD
+++ b/README.CD
@@ -305,7 +305,7 @@ that may be able to help diagnose problems:
                   shared by two subsystems (eg. console and
                   debugger). Sharing is controlled by MSB of each
                   transmitted/received character.
- [NB. Default for this option is 'com1,tty']
+ [NB. Default for this option is 'com1,vga']
 
  conswitch=<switch-char><auto-switch-char>
                   Specify how to switch serial-console input between
